3:Fixes excessive nesting and styles
Corrects excessive nesting and styles, removes unnecessary styles and comments

--- a/src/html/blocks/about_kitchens.html
+++ b/src/html/blocks/about_kitchens.html
@@ -3,7 +3,7 @@
         <div class="about__bg">
         </div>
     </div>
-    <div class="container container_about">
+    <div class="about__container about__container_about">
         <div class="about__block">
             <h2 class="about__title">О кухнях</h2>
             <div class="about__content">
