--- a/src/html/blocks/auth.html
+++ b/src/html/blocks/auth.html
@@ -1,5 +1,5 @@
 <section class="auth">
-    <div class="modal">
+    <div class="auth__modal">
         <h2 class="auth__title">Авторизация</h2>
         <form action="" class="auth-form">
             <div class="auth-form__inputs">
