--- a/src/html/blocks/delivery.html
+++ b/src/html/blocks/delivery.html
@@ -1,6 +1,5 @@
-<section class="delivery">
-    
-    <div class="container container_delivery">
+<section class="delivery"> 
+    <div class="delivery__container delivery__container_delivery">
         <div class="delivery__bg">
             <div class="delivery__block">
                 <h2 class="delivery__title">Доставка</h2>
