--- a/src/html/blocks/form.html
+++ b/src/html/blocks/form.html
@@ -1,5 +1,5 @@
 <section class="form-section">
-    <div class="container">
+    <div class="form-section__container">
         <div class="form-section__content">
             <div class="form-section__top">
                 <h2 class="form-section__title">Оставьте заявку</h2>
