--- a/src/html/blocks/material_kitchens.html
+++ b/src/html/blocks/material_kitchens.html
@@ -1,5 +1,5 @@
 <section class="material">
-    <div class="container">
+    <div class="material__container">
         <div class="material__content">
             <div class="material__top">
                 <h2 class="material__title">Материалы фасада кухонь</h2>
