--- a/src/html/blocks/secury.html
+++ b/src/html/blocks/secury.html
@@ -1,5 +1,5 @@
 <section class="secury">
-    <div class="container">
+    <div class="secury__container">
         <ul class="secury__list">
             <li class="secury__item">2024 “Мебель.ру” Все права защищены.</li>
             <li class="secury__item">Политика конфиденциальности</li>
