--- a/src/html/blocks/types_kitchen.html
+++ b/src/html/blocks/types_kitchen.html
@@ -1,9 +1,8 @@
 <section class="types-kitchen">
-    <div class="container">
+    <div class="types-kitchen__container">
         <div class="swiper">
             <div class="swiper__top">
                 <h2 class="swiper__title">Виды кухонь</h2>
-
                 <div class="swiper__cards">
                     @@include('./../templates/card.html',{
                     "img": "./../../img/img1.jpeg",
