--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer footer_bg">
-	<div class="container">
+	<div class="footer__container">
 		<div class="footer__content">
 			<div class="footer__logo footer__logo_1">
 				<p class="footer__title">Мебель</p>
