--- a/src/html/blocks/production.html
+++ b/src/html/blocks/production.html
@@ -2,7 +2,7 @@
     <div class="production__bg-wrapper">
         <div class="production__bg"></div>
     </div>
-    <div class="container container_production">
+    <div class="production__container production__container_production">
         <div class="production__block">
             <h2 class="production__title">У нас своё производство</h2>
             <div class="production__content">
