--- a/src/html/blocks/switch.html
+++ b/src/html/blocks/switch.html
@@ -1,5 +1,5 @@
 <section class="switch">
-    <div class="container">
+    <div class="switch__container">
         <h2 class="switch__title">Что мы предлагаем</h2>
         <div class="switch__content">
             <div class="switch__cards">
